flux/clusters/cumulus/applications/mattermost/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mattermost
  labels:
    app.kubernetes.io/name: mattermost
    app.kubernetes.io/instance: mattermost
