flux/clusters/cumulus/applications/mattermost/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mattermost
  namespace: mattermost
  labels:
    app: mattermost
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8065
      protocol: TCP
  selector:
    app: mattermost
